update href links in nav

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             </div>
             <img src="../img/logo_decor.png">
             <ul class="navigation">
-                <li>Home</li>
-                <li>Shop</li>
-                <li>Pages</li>
-                <li>Blog</li>
-                <li>Elements</li>
+                <li><a style="all:unset" href="./index.html">Home</a></li>
+                <li><a style="all:unset" href="./product.html">Pages</a></li>
+                <li><a style="all:unset" href="./blog_page.html">Blog</a></li>
+                <li><a style="all:unset" href="./about_us.html">About Us</a></li>
+                <li><a style="all:unset" href="./contact_us.html">Contact Us</a></li>
             </ul>
             <div class="icon">
                 <i class="fa fa-search" aria-hidden="true"></i>
