corrented path from ../ to ./

--- a/about_us.html
+++ b/about_us.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../Font Awesome/font-awesome-4.7.0/css/font-awesome.min.css">
-	<!-- <link rel="stylesheet" type="text/css" href="../css/style.css"> -->
+    <link rel="stylesheet" type="text/css" href="./Font Awesome/font-awesome-4.7.0/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="./css/style.css"> -->
 	<link rel="stylesheet" type="text/css" href="./style.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
         <div class="menu">
             <div class="bar"></div>
         </div>
-        <img src="../img/Logo2.png.webp">
+        <img src="./img/Logo2.png.webp">
         <ul class="navigation">
             <li><a style="all:unset" href="./index.html">Home</a></li>
             <li><a style="all:unset" href="./product.html">Pages</a></li>
@@ -39,12 +39,12 @@
     </div>
 
     <div class="about_section1">
-        <img src="../img/about us/bg-about05.png.webp" alt="">
+        <img src="./img/about us/bg-about05.png.webp" alt="">
         <div class="content">
             <div class="no">
                 <p>09</p>
                 <div class="no_icon_context">
-                    <img src="../img/about us/confetti.png" alt="">
+                    <img src="./img/about us/confetti.png" alt="">
 
                     <h3>YEARS<br> EXPERIENCE WORKING</h3>
                 </div>
@@ -68,7 +68,7 @@
         <h3>Responsible and sustainable development</h3>
         <div class="about_rows">
             <div class="items">
-                <div class="item_logo"><img src="../img/about us/vision.png" alt=""></div>
+                <div class="item_logo"><img src="./img/about us/vision.png" alt=""></div>
                 <h2>Our Vision</h2>
                 <ul>
                     <li>Good Service</li>
@@ -80,7 +80,7 @@
                 </ul>
             </div>
             <div class="items">
-                <div class="item_logo"><img src="../img/about us/goal.png" alt=""></div>
+                <div class="item_logo"><img src="./img/about us/goal.png" alt=""></div>
                 <h2>Our Mission</h2>
                 <ul>
                     <li>Change The Habits</li>
@@ -92,7 +92,7 @@
                 </ul>
             </div>
             <div class="items">
-                <div class="item_logo"><img src="../img/about us/pinky-promise.png" alt=""></div>
+                <div class="item_logo"><img src="./img/about us/pinky-promise.png" alt=""></div>
                 <h2>Our Promise</h2>
                 <ul>
                     <li>Sustainable Relationship</li>
@@ -108,33 +108,33 @@
     <div class="about_section3">
         <div class="bars">
             <div class="bar_item">
-                <img src="../img/about us/paint-palette.png" alt="">
+                <img src="./img/about us/paint-palette.png" alt="">
                 <br>
                 Design
             </div>
             <div class="bar_item">
-                <img src="../img/about us/sewing-machine.png" alt="">
+                <img src="./img/about us/sewing-machine.png" alt="">
                 <br>
                 Technology
             </div>
             <div class="bar_item">
-                <img src="../img/about us/delivery-bike.png" alt="">
+                <img src="./img/about us/delivery-bike.png" alt="">
                 <br>
                 Shipping
             </div>
             <div class="break"></div>
             <div class="bar_item">
-                <img src="../img/about us/problem-solving.png" alt="">
+                <img src="./img/about us/problem-solving.png" alt="">
                 <br>
                 Problem Solving
             </div>
             <div class="bar_item">
-                <img src="../img/about us/policy.png" alt="">
+                <img src="./img/about us/policy.png" alt="">
                 <br>
                 Policy
             </div>
             <div class="bar_item">
-                <img src="../img/about us/user.png" alt="">
+                <img src="./img/about us/user.png" alt="">
                 <br>
                 Integration
             </div>
@@ -145,7 +145,7 @@
         <h1>The Leader Board Of Our Company</h1>
         <div class="about_s4_item">
             <div class="team_img">
-                <img src="../img/about us/team1-1.png" alt="">
+                <img src="./img/about us/team1-1.png" alt="">
             </div>
             <div class="team_txt">
                 <h2>Bernice</h3>
@@ -160,7 +160,7 @@
             </div>
         </div>
         <div class="about_s4_item">
-            <div class="team_img"><img src="../img/about us/team2-1.png" alt=""></div>
+            <div class="team_img"><img src="./img/about us/team2-1.png" alt=""></div>
             <div class="team_txt">
                 <h2>Lisa John</h3>
                 <h5>Fashion Design</h5>
@@ -174,7 +174,7 @@
             </div>
         </div>
         <div class="about_s4_item">
-            <div class="team_img"><img src="../img/about us/team3-1.png" alt=""></div>
+            <div class="team_img"><img src="./img/about us/team3-1.png" alt=""></div>
             <div class="team_txt">
                 <h2>Hiddleston</h3>
                 <h5>Fashion Design</h5>
@@ -188,7 +188,7 @@
             </div>
         </div>
         <div class="about_s4_item">
-            <div class="team_img"><img src="../img/about us/team4-1.png" alt=""></div>
+            <div class="team_img"><img src="./img/about us/team4-1.png" alt=""></div>
             <div class="team_txt">
                 <h2>Adelaide</h3>
                 <h5>Fashion Design</h5>
@@ -207,7 +207,7 @@
         <h1>What Our Customers Say</h1>
         <div class="about_s5_row">
             <div class="s5_row_items hid">
-                <img src="../img/about us/avatar-tes2.jpg" alt="">
+                <img src="./img/about us/avatar-tes2.jpg" alt="">
                 <h3>
                     “We love our new duds and continue to be grateful for your efforts on behalf of our planet.”
                 </h3>
@@ -216,7 +216,7 @@
                 </h4>
             </div>
             <div class="s5_row_items">
-                <img src="../img/about us/avatar-tes.jpg" alt="">
+                <img src="./img/about us/avatar-tes.jpg" alt="">
                 <h3>
                     "Thank you for your gracious hospitality hosting the W.H.A.T. Group!  The tops I bought are beautiful!"
                 </h3>
@@ -225,7 +225,7 @@
                 </h4>
             </div>
             <div class="s5_row_items hid">
-                <img src="../img/about us/avatar-tes3.jpg" alt="">
+                <img src="./img/about us/avatar-tes3.jpg" alt="">
                 <h3>
                     "Thank you again for your hospitality! The philosophy you shared led to a great clothing decision."
                 </h3>
@@ -238,7 +238,7 @@
     <div class="footer">
         <div class="foot_div">
             <div class="contact">
-                <h3><img src="../img/Logo2.png.webp" alt=""></h3>
+                <h3><img src="./img/Logo2.png.webp" alt=""></h3>
                 <h4><span class="grey">Phone:</span>+98 0 98760954</h4>
                 <h4><span class="grey">Email:</span>info@Odndhfm.com</h4>
                 <h4><span class="grey">Address:</span>11923 NE Sumner St</h4>
