--- a/blog_page.html
+++ b/blog_page.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../Font Awesome/font-awesome-4.7.0/css/font-awesome.min.css">
-	<!-- <link rel="stylesheet" type="text/css" href="../css/style.css"> -->
+    <link rel="stylesheet" type="text/css" href="./Font Awesome/font-awesome-4.7.0/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="./css/style.css"> -->
 	<link rel="stylesheet" type="text/css" href="./style.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
         <div class="menu">
             <div class="bar"></div>
         </div>
-        <img src="../img/Logo2.png.webp">
+        <img src="./img/Logo2.png.webp">
         <ul class="navigation">
             <li><a style="all:unset" href="./index.html">Home</a></li>
             <li><a style="all:unset" href="./product.html">Pages</a></li>
@@ -51,7 +51,7 @@
             <h1>50 Foods That Are Super Healthy</h1>
             <h3><span class="hover">31 MAY 2020 </span><span class="bull">.</span><span class="hover"> Comment (0)</span></h3>
             <div class="img">
-                <img src="../img/blog/food-background-with-assorted-coffee-ZVDCGQS-840x573.jpg" alt="">
+                <img src="./img/blog/food-background-with-assorted-coffee-ZVDCGQS-840x573.jpg" alt="">
             </div>
             <br>
             <h4>
@@ -63,7 +63,7 @@
             <h1>10 Anti-Aging Foods to Support</h1>
             <h3><span class="hover">31 MAY 2020 </span><span class="bull">.</span><span class="hover"> Comment (0)</span></h3>
             <div class="img">
-                <img src="../img/blog/sauteed-agretti-italian-food-6MTAFG3-840x573.jpg" alt="">
+                <img src="./img/blog/sauteed-agretti-italian-food-6MTAFG3-840x573.jpg" alt="">
             </div>
             <br>
             <h4>
@@ -75,7 +75,7 @@
             <h1>Healthy Dinner Recipes in 10 Minutes</h1>
             <h3><span class="hover">31 MAY 2020 </span><span class="bull">.</span><span class="hover"> Comment (0)</span></h3>
             <div class="img">
-                <img src="../img/blog/healthy-green-vegan-vegetarian-food-in-full-paper-55KWW6M-840x573.jpg" alt="">
+                <img src="./img/blog/healthy-green-vegan-vegetarian-food-in-full-paper-55KWW6M-840x573.jpg" alt="">
             </div>
             <br>
             <h4>
@@ -89,12 +89,12 @@
                 <input type="text" placeholder="Search for articles" name="search">
                 <div class="btn"><i class="fa fa-search"></i></div>
             </div>
-            <img src="../img/blog/azamat-zhanisov.jpg.webp" alt="">
+            <img src="./img/blog/azamat-zhanisov.jpg.webp" alt="">
             <div class="blog_s2_imgtxt">
                 <h2>MARIGOLD ROSE</h4>
                 <h4>Photographer & Blogger</h6>
                 <h5>It is a long established fact that a reader will be distracted</h5>
-                <img src="../img/blog/logo-sidebar.png.webp" alt="">
+                <img src="./img/blog/logo-sidebar.png.webp" alt="">
             </div>
             <div class="blog_follow">
                 <h3><span class="background_white">FOLLOW US</span></h3>
@@ -110,7 +110,7 @@
             <div class="blog_recent_post">
                 <h3><span class="background_white">RECENT POST</span></h3>
                 <div class="blog_post_items">
-                    <img src="../img/blog/recent_post/mika-houtmeyers-ttNVVqxg_xE-unsplash-70x70.jpg.webp" alt="">
+                    <img src="./img/blog/recent_post/mika-houtmeyers-ttNVVqxg_xE-unsplash-70x70.jpg.webp" alt="">
                     <div class="blog_post_txt">
                         <h3>I’ll drink to That: Bruce Neyers of Neyerw Vineyards </h3>
                         <h3><span class="grey">NOVEMBER 3, 2020</span></h3>
@@ -119,7 +119,7 @@
                 <br>
                 <br>
                 <div class="blog_post_items">
-                    <img src="../img/blog/recent_post/5_VerresCarafe-copie-1024x0-1-70x70.jpg.webp" alt="">
+                    <img src="./img/blog/recent_post/5_VerresCarafe-copie-1024x0-1-70x70.jpg.webp" alt="">
                     <div class="blog_post_txt">
                         <h3>I’ll drink to That: Bruce Neyers of Neyerw Vineyards </h3>
                         <h3><span class="grey">NOVEMBER 3, 2020</span></h3>
@@ -128,7 +128,7 @@
                 <br>
                 <br>
                 <div class="blog_post_items">
-                    <img src="../img/blog/recent_post/felix-w-aNMMayob3pw-unsplash-70x70.jpg.webp" alt="">
+                    <img src="./img/blog/recent_post/felix-w-aNMMayob3pw-unsplash-70x70.jpg.webp" alt="">
                     <div class="blog_post_txt">
                         <h3>I’ll drink to That: Bruce Neyers of Neyerw Vineyards </h3>
                         <h3><span class="grey">NOVEMBER 3, 2020</span></h3>
@@ -137,7 +137,7 @@
                 <br>
                 <br>
                 <div class="blog_post_items">
-                    <img src="../img/blog/recent_post/alec-favale-KIqw3GIhdHA-unsplash-70x70.jpg" alt="">
+                    <img src="./img/blog/recent_post/alec-favale-KIqw3GIhdHA-unsplash-70x70.jpg" alt="">
                     <div class="blog_post_txt">
                         <h3>I’ll drink to That: Bruce Neyers of Neyerw Vineyards </h3>
                         <h3><span class="grey">NOVEMBER 3, 2020</span></h3>
@@ -146,7 +146,7 @@
                 <br>
                 <br>
                 <div class="blog_post_items">
-                    <img src="../img/blog/recent_post/blog-organic4-70x70.jpg.webp" alt="">
+                    <img src="./img/blog/recent_post/blog-organic4-70x70.jpg.webp" alt="">
                     <div class="blog_post_txt">
                         <h3>I’ll drink to That: Bruce Neyers of Neyerw Vineyards </h3>
                         <h3><span class="grey">NOVEMBER 3, 2020</span></h3>
@@ -155,7 +155,7 @@
                 <br>
                 <br>
                 <div class="blog_post_items">
-                    <img src="../img/blog/recent_post/blog-home-2-70x70.jpg" alt="">
+                    <img src="./img/blog/recent_post/blog-home-2-70x70.jpg" alt="">
                     <div class="blog_post_txt">
                         <h3>I’ll drink to That: Bruce Neyers of Neyerw Vineyards </h3>
                         <h3><span class="grey">NOVEMBER 3, 2020</span></h3>
@@ -175,7 +175,7 @@
     <div class="footer">
         <div class="foot_div">
             <div class="contact">
-                <h3><img src="../img/Logo2.png.webp" alt=""></h3>
+                <h3><img src="./img/Logo2.png.webp" alt=""></h3>
                 <h4><span class="grey">Phone:</span>+98 0 98760954</h4>
                 <h4><span class="grey">Email:</span>info@Odndhfm.com</h4>
                 <h4><span class="grey">Address:</span>11923 NE Sumner St</h4>
