--- a/contact_us.html
+++ b/contact_us.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../Font Awesome/font-awesome-4.7.0/css/font-awesome.min.css">
-	<!-- <link rel="stylesheet" type="text/css" href="../css/style.css"> -->
+    <link rel="stylesheet" type="text/css" href="./Font Awesome/font-awesome-4.7.0/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="./css/style.css"> -->
 	<link rel="stylesheet" type="text/css" href="./style.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
         <div class="menu">
             <div class="bar"></div>
         </div>
-        <img src="../img/Logo2.png.webp">
+        <img src="./img/Logo2.png.webp">
         <ul class="navigation">
             <li><a style="all:unset" href="./index.html">Home</a></li>
             <li><a style="all:unset" href="./product.html">Pages</a></li>
@@ -42,7 +42,7 @@
     <div class="contact_section1">
         <div class="s1_contact">
             <h1>Contact Info</h1>
-            <div class="img updown"><img src="../img/contact_us/phone.png" alt=""></div>
+            <div class="img updown"><img src="./img/contact_us/phone.png" alt=""></div>
             <div class="txt">
                 <h3>Phone:</h3>
                 <h4>
@@ -51,7 +51,7 @@
             </div>
             
             <div class="break"></div>
-            <div class="img updown"><img src="../img/contact_us/email.png" alt=""></div>
+            <div class="img updown"><img src="./img/contact_us/email.png" alt=""></div>
             <div class="txt">
                 <h3>Email:</h3>
                 <h4>
@@ -59,7 +59,7 @@
                 </h4>
             </div>
             <div class="break"></div>
-            <div class="img updown"><img src="../img/contact_us/placeholder.png" alt=""></div>
+            <div class="img updown"><img src="./img/contact_us/placeholder.png" alt=""></div>
             <div class="txt">
                 <h3>Address:</h3>
                 <h4>
@@ -85,7 +85,7 @@
     <div class="footer">
         <div class="foot_div">
             <div class="contact">
-                <h3><img src="../img/Logo2.png.webp" alt=""></h3>
+                <h3><img src="./img/Logo2.png.webp" alt=""></h3>
                 <h4><span class="grey">Phone:</span>+98 0 98760954</h4>
                 <h4><span class="grey">Email:</span>info@Odndhfm.com</h4>
                 <h4><span class="grey">Address:</span>11923 NE Sumner St</h4>
