--- a/product.html
+++ b/product.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../Font Awesome/font-awesome-4.7.0/css/font-awesome.min.css">
-	<!-- <link rel="stylesheet" type="text/css" href="../css/style.css"> -->
+    <link rel="stylesheet" type="text/css" href="./Font Awesome/font-awesome-4.7.0/css/font-awesome.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="./css/style.css"> -->
 	<link rel="stylesheet" type="text/css" href="./style.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
         <div class="menu">
             <div class="bar"></div>
         </div>
-        <img src="../img/Logo2.png.webp">
+        <img src="./img/Logo2.png.webp">
         <ul class="navigation">
             <li><a style="all:unset" href="./index.html">Home</a></li>
             <li><a style="all:unset" href="./product.html">Pages</a></li>
@@ -37,7 +37,7 @@
 
     <div class="product_section1">
         <div class="product_img">
-            <img src="../img/product/lamp.jpg.webp" alt="">
+            <img src="./img/product/lamp.jpg.webp" alt="">
         </div>
         <div class="product_txt dark">
             <ul>
@@ -90,7 +90,7 @@
         <div class="product_s2_row">
             <div class="product_s2_items">
                 <div class="img">
-                    <img src="../img/product/Decoration_vase.H03-750x1000.png.webp">
+                    <img src="./img/product/Decoration_vase.H03-750x1000.png.webp">
                     <div class="img_icons">
                         <div class="icons i1"><i class="fa fa-shopping-basket" aria-hidden="true"></i></div>
                         <div class="icons i2"><i class="fa fa-search-plus" aria-hidden="true"></i></div>
@@ -103,7 +103,7 @@
             </div>
             <div class="product_s2_items">
                 <div class="img">
-                    <img src="../img/product/gold_mesh-750x1000.jpg.webp">
+                    <img src="./img/product/gold_mesh-750x1000.jpg.webp">
                     <div class="img_icons">
                         <div class="icons i1"><i class="fa fa-shopping-basket" aria-hidden="true"></i></div>
                         <div class="icons i2"><i class="fa fa-search-plus" aria-hidden="true"></i></div>
@@ -116,7 +116,7 @@
             </div>
             <div class="product_s2_items hide_product">
                 <div class="img">
-                    <img src="../img/product/glowing_vintage-750x1000.jpg.webp">
+                    <img src="./img/product/glowing_vintage-750x1000.jpg.webp">
                     <div class="img_icons">
                         <div class="icons i1"><i class="fa fa-shopping-basket" aria-hidden="true"></i></div>
                         <div class="icons i2"><i class="fa fa-search-plus" aria-hidden="true"></i></div>
@@ -133,7 +133,7 @@
     <div class="footer">
         <div class="foot_div">
             <div class="contact">
-                <h3><img src="../img/Logo2.png.webp" alt=""></h3>
+                <h3><img src="./img/Logo2.png.webp" alt=""></h3>
                 <h4><span class="grey">Phone:</span>+98 0 98760954</h4>
                 <h4><span class="grey">Email:</span>info@Odndhfm.com</h4>
                 <h4><span class="grey">Address:</span>11923 NE Sumner St</h4>
