--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../Font Awesome/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="./Font Awesome/font-awesome-4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./style.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
             <div class="menu">
                 <div class="bar"></div>
             </div>
-            <img src="../img/logo_decor.png">
+            <img src="./img/logo_decor.png">
             <ul class="navigation">
                 <li><a style="all:unset" href="./index.html">Home</a></li>
                 <li><a style="all:unset" href="./product.html">Pages</a></li>
@@ -52,25 +52,25 @@
 
     <div class="section2">
         <div class="items">
-            <img src="../img/section2/item1.png">
+            <img src="./img/section2/item1.png">
             <p class="txt">Home Decor</p>
         </div>
         <div class="items">
-            <img src="../img/section2/item2.png">
+            <img src="./img/section2/item2.png">
             <div class="txt">Ceiling Decor</div>
         </div>
         <div class="items">
-            <img src="../img/section2/item3.png">
+            <img src="./img/section2/item3.png">
             <div class="txt">Wall Decor</div>
 
         </div>
         <div class="items">
-            <img src="../img/section2/item4.png">
+            <img src="./img/section2/item4.png">
             <div class="txt">Vase Decor</div>
 
         </div>
         <div class="items">
-            <img src="../img/section2/item5.png">
+            <img src="./img/section2/item5.png">
             <div class="txt">Holiday Decor</div>
         </div>
     </div>
@@ -122,7 +122,7 @@
         <div class="row1">
             <div class="box">
                 <div class="img">
-                    <img src="../img/section4/Chandelier-352x474.png">
+                    <img src="./img/section4/Chandelier-352x474.png">
                     <div class="icons">
                         <i class="fa fa-shopping-basket" aria-hidden="true"></i><br>
                         <i class="fa fa-search-plus" aria-hidden="true"></i>
@@ -135,7 +135,7 @@
             </div>
             <div class="box">
                 <div class="img">
-                    <img src="../img/section4/lamp-352x474.jpg">
+                    <img src="./img/section4/lamp-352x474.jpg">
                     <div class="icons">
                         <i class="fa fa-shopping-basket" aria-hidden="true"></i><br>
                         <i class="fa fa-search-plus" aria-hidden="true"></i>
@@ -148,7 +148,7 @@
             </div>
             <div class="box">
                 <div class="img ">
-                    <img src="../img/section4/pxu2l2b-352x474.jpg">
+                    <img src="./img/section4/pxu2l2b-352x474.jpg">
                     <div class="icons">
                         <i class="fa fa-shopping-basket" aria-hidden="true"></i><br>
                         <i class="fa fa-search-plus" aria-hidden="true"></i>
@@ -161,7 +161,7 @@
             </div>
             <div class="box">
                 <div class="img">
-                    <img src="../img/section4/dance_hand-352x474.jpg">
+                    <img src="./img/section4/dance_hand-352x474.jpg">
                     <div class="icons">
                         <i class="fa fa-shopping-basket" aria-hidden="true"></i><br>
                         <i class="fa fa-search-plus" aria-hidden="true"></i>
@@ -174,7 +174,7 @@
             </div>
             <div class="box">
                 <div class="img">
-                    <img src="../img/section4/glowing_vintage-352x474.jpg">
+                    <img src="./img/section4/glowing_vintage-352x474.jpg">
                     <div class="icons">
                         <i class="fa fa-shopping-basket" aria-hidden="true"></i><br>
                         <i class="fa fa-search-plus" aria-hidden="true"></i>
@@ -221,7 +221,7 @@
             <div class="row">
                 <div class="item1">
                     <div class="img">
-                        <img src="../img/section5/decor-penguins-352x475.png">
+                        <img src="./img/section5/decor-penguins-352x475.png">
                         <div class="icons">
                             <i class="fa fa-shopping-basket" aria-hidden="true"></i><br>
                             <i class="fa fa-search-plus" aria-hidden="true"></i>
@@ -235,7 +235,7 @@
                 </div>
                 <div class="item2">
                     <div class="img">
-                        <img src="../img/section5/decor-snail-352x475.png">
+                        <img src="./img/section5/decor-snail-352x475.png">
                         <div class="icons">
                             <i class="fa fa-shopping-basket" aria-hidden="true"></i><br>
                             <i class="fa fa-search-plus" aria-hidden="true"></i>
@@ -253,7 +253,7 @@
                 </div>
                 <div class="item3">
                     <div class="img">
-                        <img src="../img/section5/decor-cat-352x475.png">
+                        <img src="./img/section5/decor-cat-352x475.png">
                         <div class="icons">
                             <i class="fa fa-shopping-basket" aria-hidden="true"></i><br>
                             <i class="fa fa-search-plus" aria-hidden="true"></i>
@@ -272,7 +272,7 @@
     <div class="footer">
         <div class="foot_div">
             <div class="contact">
-                <h3><img src="../img/Logo2.png.webp" alt=""></h3>
+                <h3><img src="./img/Logo2.png.webp" alt=""></h3>
                 <h4><span class="grey">Phone:</span>+98 0 98760954</h4>
                 <h4><span class="grey">Email:</span>info@Odndhfm.com</h4>
                 <h4><span class="grey">Address:</span>11923 NE Sumner St</h4>
